PWA support added succesful

--- a/web/index.html
+++ b/web/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/icons/secura-192.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+    <meta name="theme-color" content="#0C3CFF" />
+    <meta name="description" content="Secura — secure file vault with encryption and audit logs." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Secura Web</title>
+    <title>Secura</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
